[ index.html ] new license BSD3 for versions > 2.8.4.

--- a/index.html
+++ b/index.html
@@ -256,7 +256,12 @@ Aarne Ranta 2002 - 2020.
 <h2>License</h2>
 
 <p>
-Free software under GNU General Public License
+Free software under the
+<a href="https://opensource.org/licenses/BSD-3-Clause">BSD 3-clause</a>
+license.
+<p>
+Versions until 2.8.4 released under the
+GNU General Public License
 (<a href="https://www.gnu.org/licenses/gpl-2.0.html">GPL</a>).
 <br/>
 <br/>  <!-- some extra vertical space at the end of the page -->
