Fix #15: web page: removed C#, updated tutorial to 2.9

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
     <p>The BNF Converter is a compiler construction tool generating a compiler
       front-end from a <b>Labelled BNF grammar</b>. It is currently
       generating code for the target languages
-      Haskell, Agda, C, C++, C#, Java, and OCaml,
+      Haskell, Agda, C, C++, Java, and OCaml,
       as well as XML representations and Pygment syntax highlighters.
     </p>
     <p>Given a <b>Labelled BNF grammar</b> the tool produces:</p>
