Small tutorial fixes

--- a/tutorial/bnfc-tutorial.html
+++ b/tutorial/bnfc-tutorial.html
@@ -57,8 +57,8 @@
     <p>You can obtain</p>
     <ul>
       <li>a Windows binary</li>
-      <li>a Linux (i386) binary</li>
-      <li>a Mac OS X (i386) binary</li>
+      <li>a Linux (x86_64) binary</li>
+      <li>a Mac OS X (x86_64) binary</li>
       <li>a source package</li>
     </ul>
     <p>If you are using Debian or Ubuntu Linux, you can obtain BNFC with their package system (but it is a slightly older version).</p>
