--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@ layout: default
       <li>a case skeleton for the abstract syntax in the target language,</li>
       <li>a <i>pretty-printer</i> in the target language,</li>
       <li>an <a href="http://www.haskell.org/alex">Alex</a>,
-        <a href="http://www.cs.princeton.edu/~appel/modern/java/JLex/">JLex</a>,
+        <a href="http://www.cs.princeton.edu/~appel/modern/java/JLex/">JLex</a>, <a href="https://v2.ocaml.org/manual/lexyacc.html">Ocamllex</a> 
         or <a href="http://flex.sourceforge.net/">Flex</a> <i>lexer</i> generator file ,</li>
       <li>a <a href="http://www.haskell.org/happy">Happy</a>,
         <a href="http://www2.cs.tum.edu/projects/cup/">CUP</a>,
+        <a href="https://v2.ocaml.org/manual/lexyacc.html">Ocamlyacc</a>, 
+        <a href="http://gallium.inria.fr/~fpottier/menhir/">Menhir</a>, 
+        <a href="http://antlr.org/">ANTLR</a>
         or <a href="http://www.gnu.org/software/bison/bison.html">Bison</a>
         <i>parser</i> generator file, and</li>
       <li>a LaTeX file containing a <i>readable specification</i> of the
